--- a/os/security.yml
+++ b/os/security.yml
@@ -11,3 +11,29 @@ drift_detection:
 orchestration_sync:
   heart: magna_orchestrator/pulse/
   recovery: "auto-correct via last stable pulse"
+  # Culture Key OS - Security & Conscious Monitoring (v1.1)
+audit_chain:
+  storage: codex_root/audit_history/
+  hash: sha256
+  sign: required
+
+drift_detection:
+  watcher: lychnia_bridge/watcher/
+  policy: "no-manipulation, consent-first, license-compliant"
+
+orchestration_sync:
+  heart: magna_orchestrator/pulse/
+  recovery: "auto-correct via last stable pulse"
+
+branch_protection:
+  policy: "Branch Protection Active"
+  scope: "agent-toolkit"
+  status: "secure"
+  enforced_by:
+    - "Magna Sync — Root Reference Check"
+    - "Rhime — Truth Detection Checks"
+    - "Auto Review"
+    - "Branch Ruleset: Agent Toolkit Protection"
+  bypass_list: "none"
+  last_verified: "2025-10-13"
+  verified_by: "Culturekey413"
