--- a/.github/workflows/add-to-project.yml
+++ b/.github/workflows/add-to-project.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: leonsteinhaeuser/project-beta-automations@v2.2.1
         with:
           gh_token: ${{ secrets.PROJECTS_TOKEN }}
-          organization: Culturekey413
+          user: Culturekey413
           project_id: 2
           resource_node_id: ${{ github.event.issue.node_id }}
           
